# SHIFT

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  script.txt
app/: config.py  database.py  main.py  models.py  schemas.py  services.py
tests/: conftest.py  test_api.py
